--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,0,0" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="index.css" rel="stylesheet">
     <title>Wallet</title>
   </head>
   <body>
